--- a/styles.css
+++ b/styles.css
@@ -2871,6 +2871,7 @@ box-shadow: -4px 0 25px rgba(205, 127, 50, 0.5), 0 0 25px rgba(205, 127, 50, 0.4
     background: rgba(255, 255, 255, 0.03);
     border-radius: 6px;
     transition: all 0.2s;
+	color: white;
 }
 
 .rankings-compact-item:hover,
